# agentic-ai-job-hunter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  login.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  export.py  graph.py  logger.py  state.py  utils.py
src/nodes/: evaluator.py  planner.py  scraper.py
src/prompts/: evaluator.py  planner.py
tests/: test_export.py  test_state.py  test_utils.py
web/: index.html
