[project]
name = "agentic-ai-job-hunter"
version = "1.0.0"
description = "Agentic AI 校园招聘求职智能体 — 基于 LangGraph + Playwright + LLM 的自主求职系统"
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
